@@ -48,17 +48,34 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+import javax.swing.SwingUtilities;
 import javax.swing.table.AbstractTableModel;
+import org.netbeans.api.progress.ProgressHandle;
+import org.netbeans.api.progress.ProgressHandleFactory;
 
 /**
  *
- * @author sg155630
+ * @author Sergey Grinev
  */
-public class HostsListTableModel extends AbstractTableModel {
+class HostsListTableModel extends AbstractTableModel {
 
     private static final Logger LOG = Logger.getLogger("cnd.remote.logger"); // NOI18N
 
+    private final ProgressHandle phandle;
+
     public HostsListTableModel() {
+        this.phandle = ProgressHandleFactory.createHandle("Gathering hosts information"); //NOI18N
+    }
+
+    public ProgressHandle getProgressHandle() {
+        return phandle;
+    }
+
+    private Runnable runOnFinish;
+
+    public void start(Runnable runOnFinish) {
+        this.runOnFinish = runOnFinish;
+        phandle.start(255);
         new Thread(new HostsLoader()).start();
     }
 
@@ -110,7 +127,7 @@ public class HostsListTableModel extends AbstractTableModel {
 
     //private final List<HostRecord> queueForCheck = Collections.synchronizedList(new ArrayList<HostRecord>());
 
-    private class HostRecord {
+    private static class HostRecord {
 
         public String name;
         public String ip;
@@ -138,6 +155,7 @@ public class HostsListTableModel extends AbstractTableModel {
                 long n = System.currentTimeMillis();
                 int count = 0;
                 for (short i = 0; i <= 255; i++) {
+                    phandle.progress(i);
                     if (i == localLastOne) {
                         // localhost will never be offline again
                         continue;
@@ -145,18 +163,24 @@ public class HostsListTableModel extends AbstractTableModel {
                     ip[idxLast] = (byte) i;
                     InetAddress host = InetAddress.getByAddress(ip);
                     try {
-                        if (host.isReachable(2000)) {
+                        if (host.isReachable(1000)) {
                             count++;
-                            HostsListTableModel.this.addHost(host.getHostAddress(), host.getHostName(), new Boolean(doPing(host, 22)));
+                            HostsListTableModel.this.addHost(host.getHostAddress(), host.getHostName(), Boolean.valueOf(doPing(host, 22)));
                         }
                     } catch (IOException ex) {
-                        LOG.log(Level.SEVERE, null, ex);
+                        // it's quite normal if host denies to respond (firewall, etc)
+                        LOG.log(Level.INFO, null, ex);
                     }
                 }
                 LOG.info("Finding " + count + " host(s) took " + ((System.currentTimeMillis() - n) / 1000) + "s");
 
             } catch (UnknownHostException ex) {
                 LOG.log(Level.SEVERE, null, ex);
+            } finally {
+                phandle.finish();
+                if (runOnFinish != null) {
+                    SwingUtilities.invokeLater(runOnFinish); //SwingUtilities is a bit cheat here, but otherwise one have to introduce ugly double Runnable in caller
+                }
             }
 
         }
